fix: edit document form dark mode compatibility (#125)
* chore: reformat project code styling using prettier

* fix(ui): fix the bug of paste

- now we delete styles from text then ahow that

* chore: format code with prettier

- and add .prettierrc to sync prettier extention and prettier cli
- now format with npx prettier --write . or with extension
- and in all of pc or prettier ex or cli  the output format is same

* refactor: remove enable chat loading on sendMessageDecorator because it should enable after getting loading event through websocket

--- a/src/index.css
+++ b/src/index.css
@@ -268,3 +268,54 @@ code {
 ::-webkit-scrollbar-track {
   background: transparent;
 }
+
+.ck-content {
+  color: #111827 !important;
+  background: #ffffff !important;
+}
+
+.dark .ck-content {
+  color: #f9fafb !important;
+  background: #1f2937 !important;
+}
+.ck-content a {
+  color: #1d4ed8 !important;
+}
+
+.ck-content table,
+.ck-content td,
+.ck-content th {
+  border-color: #d1d5db !important;
+}
+
+.dark .ck-content a {
+  color: #60a5fa !important;
+}
+
+.dark .ck-content table,
+.dark .ck-content td,
+.dark .ck-content th {
+  border-color: #374151 !important;
+}
+
+/* حالت لایت */
+.ck-content,
+.ck-content p,
+.ck-content span,
+.ck-content li,
+.ck-content td,
+.ck-content th {
+  color: #111827 !important;
+  background: #ffffff !important;
+}
+
+/* حالت دارک */
+.dark .ck-content,
+.dark .ck-content p,
+.dark .ck-content span,
+.dark .ck-content li,
+.dark .ck-content td,
+.dark .ck-content th {
+  color: #f9fafb !important;
+  background: #1f2937 !important;
+}
